# iss-data-analytics-system

./: .bandit  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  WARP.md  pyproject.toml
.github/workflows/: README.md  ci-cd.yml  pr-validation.yml  production-deploy.yml  staging-deploy.yml  test-deployment-secrets.yml
docs/security/: audit-trail.md
docs/system-solution/: coolify-config-backup.md  coolify-webhook-setup-guide.md  devops-architecture.md  high-level-requirements.md  staged-deployment-config-guide.md  staged-deployment-implementation-guide.md  staging-with-branch-proposal.md
libs/common/: pyproject.toml
services/event-storage/: pyproject.toml
services/ingestion/: .dockerignore  Dockerfile  pyproject.toml
services/ingestion/app/: main.py
services/ingestion/docs/system-solution/: ingestion-service-architecture.md  ingestion-service-main-tasks.md  ingestion-service-wbs.csv
services/ingestion/implementation/T002 - Prepare Access, Repositories, and Environment/: design.md  environment-configuration.md  health-check-configuration.md  requirements.md  tasks.md
services/pee-bot/: pyproject.toml
tests/integration/: test_coolify_deployment.py  test_github_actions.py  test_repository_access.py  test_secrets_management.py  test_security_audit.py  test_vps_environment.py
tests/security/: test_access_controls.py
