[project]
name = "iss-data-analytics-system"
version = "0.1.0"
description = "A real-time telemetry platform that ingests ISS Lightstreamer data, validates and enriches it, publishes to a durable message bus, enables near-real-time analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.28.0",
    "types-psutil>=5.9.0",
]

[tool.uv.workspace]
members = ["services/*"]
exclude = ["services/event-storage", "services/pee-bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "*/tests"]
